--- a/README.Rmd
+++ b/README.Rmd
@@ -17,3 +17,14 @@ Include your answers in this document (Rmd file). Make sure that it knits proper
 
 All submissions to the github repo will be automatically uploaded for grading once the due date is passed.
 Submit a link to your repository on Canvas (only one submission per team) to signal to the instructors that you are done with your submission.
+
+
+1. Inspect the first few lines of the dataset
+
+```{r}
+  
+  library(classdata)
+  view(ames)
+```
+
+2. Is there a variable of special interest or focus?
