--- a/README.Rmd
+++ b/README.Rmd
@@ -4,27 +4,66 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit the README.Rmd file -->
 
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Lab report #1
 
-Follow the instructions posted at https://ds202-at-isu.github.io/labs.html for the lab assignment. The work is meant to be finished during the lab time, but you have time until Monday evening to polish things.
+Follow the instructions posted at <https://ds202-at-isu.github.io/labs.html> for the lab assignment. The work is meant to be finished during the lab time, but you have time until Monday evening to polish things.
 
-Include your answers in this document (Rmd file). Make sure that it knits properly (into the md file). Upload both the Rmd and the md file to your repository.  
+Include your answers in this document (Rmd file). Make sure that it knits properly (into the md file). Upload both the Rmd and the md file to your repository.
 
-All submissions to the github repo will be automatically uploaded for grading once the due date is passed.
-Submit a link to your repository on Canvas (only one submission per team) to signal to the instructors that you are done with your submission.
+All submissions to the github repo will be automatically uploaded for grading once the due date is passed. Submit a link to your repository on Canvas (only one submission per team) to signal to the instructors that you are done with your submission.
 
-
-1. Inspect the first few lines of the dataset
+## 1. Inspect the first few lines of the dataset
 
 ```{r}
   
   library(classdata)
-  view(ames)
+  head(ames)
+  summary(ames)
+  str(ames)
+  
 ```
 
-2. Is there a variable of special interest or focus?
+### Step 1 Result
+
+The dataset has the following variables of note: 
+
+Style 
+
+- String based variable describing the style of home (1 story, 2 story, etc.) - 
+
+Occupancy 
+- String based variable describing how many people can live in the home. (Condominium, Single-Family, Townhouse, etc)
+
+Sale Date 
+- Date variable saying when the home was sold. 
+- Expected range between 2017-07-03 and 2022-08-31.
+
+Sale Price 
+- Numerical variable describing the price of the home when sold. 
+- Expected range between 0 to 20500000. 
+
+Year Built 
+- Numerical variable with the year that the home was built. 
+- Expected range between 0 and 2022. 
+
+Acres 
+- Numerical variable describing the number of acres the house has with it. 
+- Expected value from 0.0 to maximum of 12.012. 
+
+TotalLivingArea
+- Numerical variable describing the square feet of the living area of the home. 
+- Expected values ranging from 0 to maximum of 6007. 
+
+Bedrooms
+- Numerical value describing the number of bedrooms in the home. 
+- Expected values ranging from 0.0 to 10.0.
+
+FinishedBsmtArea 
+- Numerical value describing the square feet of the finished basement.
+- Expected values ranging from 10.0 to 6496.0
+
+2.  Is there a variable of special interest or focus?
