--- a/README.Rmd
+++ b/README.Rmd
@@ -32,40 +32,64 @@ All submissions to the github repo will be automatically uploaded for grading on
 The dataset has the following variables of note: 
 
 Style 
+
 - Factor based variable describing the style of home (1 story, 2 story, etc.)
 - 12 possible values.
 
 Occupancy 
+
 - Factor based variable describing how many people can live in the home. (Condominium, Single-Family, Townhouse, etc)
 - 5 possible values.
 
 Sale Date 
+
 - Date variable saying when the home was sold. 
 - Expected range between 2017-07-03 and 2022-08-31.
 
 Sale Price 
+
 - Numerical variable describing the price of the home when sold. 
 - Expected range between 0 to 20500000. 
 
 Year Built 
+
 - Numerical variable with the year that the home was built. 
 - Expected range between 0 and 2022. 
 
 Acres 
+
 - Numerical variable describing the number of acres the house has with it. 
 - Expected value from 0.0 to maximum of 12.012. 
 
 TotalLivingArea
+
 - Numerical variable describing the square feet of the living area of the home. 
 - Expected values ranging from 0 to maximum of 6007. 
 
 Bedrooms
+
 - Numerical value describing the number of bedrooms in the home. 
 - Expected values ranging from 0.0 to 10.0.
 
 FinishedBsmtArea 
+
 - Numerical value describing the square feet of the finished basement.
 - Expected values ranging from 10.0 to 6496.0
 
-##2.  Is there a variable of special interest or focus?
+## 2.  Is there a variable of special interest or focus?
 Yes there is a variable of special interest. The sale price is a variable that we are told to look into more closely.
+
+## 3. Start the exploration of the main variable:
+```{r}
+library(ggplot2)
+colnames(ames)[6] = "SalePrice"
+
+ggplot(data = ames, aes(x = SalePrice)) + geom_histogram(binwidth=900000)
+
+
+```
+
+## 4. Start Exploration of Main Vairable.
+
+### Cassidy's Work
+I am going to explore the TotalLivingArea variable.
