--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,16 @@ All submissions to the github repo will be automatically uploaded for grading on
 
 The dataset has the following variables of note: 
 
+Parcel ID
+
+- This is a character based variable describing the ID of the transaction.
+- This seems to be a 10 length character string of numbers.
+
+Address
+
+- This is a character based variable with the address of the place sold.
+- This has a long range of strings for the address.
+
 Style 
 
 - Factor based variable describing the style of home (1 story, 2 story, etc.)
@@ -75,6 +85,23 @@ FinishedBsmtArea
 
 - Numerical value describing the square feet of the finished basement.
 - Expected values ranging from 10.0 to 6496.0
+
+LotArea
+
+- This is a numerical variable describing the total square feet of the lot.
+- The expected values range from 0 to a maximum of 523228.
+
+AC
+- This is a character variable describing whether the home has AC or not.
+- The expected value is either "Yes" or "No"
+
+FirePlace
+- This is a character value describing whether the home has a FirePlace or not. 
+- The expected value is either "Yes" or "No"
+
+Neighborhood
+- This is a factor variable describing the neighborhood of the home being sold.
+- This has 42 different categories to describe the different neighborhoods of ames.
 
 ## 2.  Is there a variable of special interest or focus?
 Yes there is a variable of special interest. The sale price is a variable that we are told to look into more closely.
